--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -154,6 +154,19 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
 
+ <!-- for corousel platest bootstrap needed....................................... -->
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css">
+
+ <!-- jQuery -->
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+ 
+ <!-- Bootstrap JS -->
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/js/bootstrap.min.js"></script>
+ <!-- for corousel end ......................................... -->
+
+
+
 </body>
 
 
