--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -206,52 +206,6 @@
   
     
     <header class="header-area header-style-1 header-height-2">
-        <div class="header-top header-top-ptb-1 d-none d-lg-block">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xl-3 col-lg-4">
-                        <div class="header-info">
-                            <ul>
-                                <li><i class="fi-rs-smartphone"></i> <a href="#">(+01) - 2345 - 6789</a></li>
-                                <li><i class="fi-rs-marker"></i><a  href="page-contact.html">Our location</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-4">
-                        <div class="text-center">
-                            <div id="news-flash" class="d-inline-block">
-                                <ul>
-                                    <li>Get great devices up to 50% off <a href="shop-grid-right.html">View details</a></li>
-                                    <li>Supper Value Deals - Save more with coupons</li>
-                                    <li>Trendy 25silver jewelry, save up 35% off today <a href="shop-grid-right.html">Shop now</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-4">
-                        <div class="header-info header-info-right">
-                            <ul>
-                                <li>
-                                    <a class="language-dropdown-active" href="#"> <i class="fi-rs-world"></i> English <i class="fi-rs-angle-small-down"></i></a>
-                                    <ul class="language-dropdown">
-                                        <li><a href="#"><img src="/assets/imgs/theme/flag-fr.png" alt="">Français</a></li>
-                                        <li><a href="#"><img src="/assets/imgs/theme/flag-dt.png" alt="">Deutsch</a></li>
-                                        <li><a href="#"><img src="/assets/imgs/theme/flag-ru.png" alt="">Pусский</a></li>
-                                    </ul>
-                                </li>
-                                <% if(typeof user !="undefined" && user){ %>
-                                    <li><i class="fi-rs-user"></i><a href="/gadgetly/logout">Log out</a></li>
-                                <% }else{ %>
-                                    <li><i class="fi-rs-user"></i><a href="/gadgetly/login">Log In</a></li>
-                                    <li><i class="fi-rs-user"></i><a href="/gadgetly/signup">Sign Up</a></li>
-                                <% } %>
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="header-middle header-middle-ptb-1 d-none d-lg-block">
             <div class="container">
                 <div class="header-wrap">
@@ -368,13 +322,14 @@
                                         </a>
                                     </div>
                             </div>
-                            <div class="header-action-2 pl-25">
-                                
-                                <a href="/gadgetly/logout" style="background-color: rgb(0, 0, 0);color: white;" class="btn btn-danger btn-sm"><i class="fi-rs-user"></i>Logout</a>
-                                
+                                <div class="header-action-2 pl-25"></div>
+                                <a href="/gadgetly/logout" style="background-color: rgb(107,29,29);color: white;" class="btn  btn-sm" style="display: inline;"><i class="fi-rs-user"></i>Logout</a>  
                             </div>
                         </div>
-                        <% }else{}  %>
+                        <% }else{ %>
+                            <a href="/gadgetly/login" style="background-color: rgb(43,138,194);color: white;" class="btn  btn-sm mr-10" style="display: inline;"><i class="fi-rs-user"></i>Login</a>
+                            <a href="/gadgetly/signup" style="background-color: rgb(43,138,194);color: white;" class="btn  btn-sm" style="display: inline;"><i class="fi-rs-user"></i>Signup</a>
+                        <% }  %>
                     </div>
                 </div>
             </div>
