--- a/views/layout/adminfooter.ejs
+++ b/views/layout/adminfooter.ejs
@@ -22,6 +22,8 @@
 <!-- Main Script -->
 <script src="/admin-assets/js/main.js" type="text/javascript"></script>
 <script src="/admin-assets/js/custom-chart.js" type="text/javascript"></script>
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/6bc73d1aec.js" crossorigin="anonymous"></script>
 </body>
 
 
