--- a/views/admin/vieworderdetails.ejs
+++ b/views/admin/vieworderdetails.ejs
@@ -76,7 +76,26 @@
             </a>
     
             <!-- Reject Button -->
-            <a href="/gadgetly/admin/allowcancel/?orderId=<%=orderData._id %>" class="btn btn-danger">
+            <a href="/gadgetly/admin/denycancel/?orderId=<%=orderData._id %>" class="btn btn-danger">
+              <i class="fas fa-times"></i> Reject
+            </a>
+          </div>
+        </div>
+      </div>
+    <% }else if(orderData.cancellationStatus === "return requested"){ %>
+      <div class="container mt-5 mb-10">
+        <div class="card">
+          <div class="card-body bg-light">
+            <h3 class="card-title">Request For Returning Order</h3>
+            <p class="card-text">Accept or reject the request by clicking on the button.</p>
+    
+            <!-- Accept Button -->
+            <a href="/gadgetly/admin/allowreturn/?orderId=<%=orderData._id %>" class="btn btn-success mr-2">
+              <i class="fas fa-check"></i> Accept
+            </a>
+    
+            <!-- Reject Button -->
+            <a href="/gadgetly/admin/denyreturn/?orderId=<%=orderData._id %>" class="btn btn-danger">
               <i class="fas fa-times"></i> Reject
             </a>
           </div>
