--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -5,7 +5,7 @@
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-frontend/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:20:36 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Evara - eCommerce HTML Template</title>
+    <title>FunForge</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,7 +42,23 @@
             margin-top: 20px; /* Adjust the margin-top as needed */
         }
     </style>
-    
+    <style>
+        #addMoneyForm {
+          max-width: 400px;
+          margin: auto;
+        }
+      
+        #addMoneyBtn {
+          position: relative;
+        }
+      
+        #addMoneyBtn .spinner-border {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      </style>
 </head>
 
 <body>
