--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -203,11 +203,15 @@
                                     <div class="tab-pane fade active show" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
                                         <div class="card">
                                             <div class="card-header">
-                                                <h5 class="mb-0">Hello Rosie! </h5>
+                                                <h3 class="mb-0 text-info">Hello User! </h3>
                                             </div>
                                             <div class="card-body">
                                                 <p>From your account dashboard. you can easily check &amp; view your <a href="#">recent orders</a>, manage your <a href="#">shipping and billing addresses</a> and <a href="#">edit your password and account details.</a></p>
                                             </div>
+                                            <div class="text-center">
+                                                <a href="/gadgetly/wallet" style="background-color: blue;" class="btn mb-15">My Wallet</a>
+                                            </div>
+                                            
                                         </div>
                                     </div>
                                     <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
