--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -101,6 +101,17 @@
         </div> <!-- table-responsive end// -->
     </div>
 </div>
+<div class="pagination-area mt-15 mb-50">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-start">
+            <%if(typeof totalPages != "undefined"){
+                for(i=1; i<=totalPages; i++){ %>
+                    <li class="page-item"><a class="page-link" href="?page=<%= i %>"><%= i %></a></li> 
+            <% } 
+           } %>
+        </ul>
+    </nav>
+</div>
 
 </section> <!-- content-main end// -->
 
