--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -59,20 +59,22 @@
                       <li><a href="#">Delivery Information</a></li>
                       <li><a href="#">Privacy Policy</a></li>
                       <li><a href="#">Terms &amp; Conditions</a></li>
-                      <li><a href="#">Contact Us</a></li>
+                      <li><a href="/gadgetly/contact">Contact Us</a></li>
                       <li><a href="#">Support Center</a></li>
                   </ul>
               </div>
               <div class="col-lg-2  col-md-3">
+                <% if(typeof user !="undefined" && user){ %>
                   <h5 class="widget-title wow fadeIn animated">My Account</h5>
                   <ul class="footer-list wow fadeIn animated">
-                      <li><a href="#">Sign In</a></li>
-                      <li><a href="#">View Cart</a></li>
-                      <li><a href="#">My Wishlist</a></li>
-                      <li><a href="#">Track My Order</a></li>
-                      <li><a href="#">Help</a></li>
-                      <li><a href="#">Order</a></li>
+                      <!-- <li><a href="/">Sign In</a></li> -->
+                      <li><a href="/gadgetly/cart">View Cart</a></li>
+                      <li><a href="/gadgetly/wishlist">My Wishlist</a></li>
+                      <li><a href="/gadgetly/myaccount">My Account</a></li>
+                      <li><a href="/gadgetly/help">Help</a></li>
+                      <li><a href="/gadgetly/wallet">Wallet</a></li>
                   </ul>
+                  <%}%>
               </div>
               <div class="col-lg-4">
                   <h5 class="widget-title wow fadeIn animated">Install App</h5>
