--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -546,9 +546,9 @@
                             </nav>
                         </div>
                     </div>
-                    <div class="hotline d-none d-lg-block">
+                    <!-- <div class="hotline d-none d-lg-block">
                         <p><i class="fi-rs-headset"></i><span>Hotline</span> 1900 - 888 </p>
-                    </div>
+                    </div> -->
                     <p class="mobile-promotion">Happy <span class="text-brand">Mother's Day</span>. Big Sale Up to 40%</p>
                     <div class="header-action-right d-block d-lg-none">
                         <div class="header-action-2">
