wishlist/cart btn (logout)

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -260,7 +260,11 @@
                                                 <div class="product-action-1">
                                                     <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
                                                     <i class="fi-rs-search"></i></a>
-                                                    <a aria-label="Add To Wishlist" class="action-btn hover-up wish-btn" productId="<%=product._id %>" href="/gadgetly/addwishlist?id=<%=product._id %>"><i class="fi-rs-heart"></i></a>
+                                                    <%if(typeof user != "undefined" && user){ %>
+                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up wish-btn" productId="<%=product._id %>" href="/gadgetly/addwishlist?id=<%=product._id %>"><i class="fi-rs-heart"></i></a>
+                                                    <%}else{ %>
+                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up" productId="<%=product._id %>" href="/gadgetly/login %>"><i class="fi-rs-heart"></i></a>
+                                                    <%} %>
                                                     <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
                                                 </div>
                                                 <div class="product-badges product-badges-position product-badges-mrg">
@@ -282,7 +286,11 @@
                                                     <span class="old-price"> <%= product.productPrice %></span>
                                                 </div>
                                                 <div class="product-action-1 show">
-                                                    <a aria-label="Add To Cart" class="action-btn hover-up  cart-btn" href="/gadgetly/addtocart/?id=<%= product._id %>"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
+                                                    <%if(typeof user != "undefined" && user){ %>
+                                                        <a aria-label="Add To Cart" class="action-btn hover-up  cart-btn" href="/gadgetly/addtocart/?id=<%= product._id %>"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
+                                                    <% }else{  %>
+                                                        <a aria-label="Add To Cart" class="action-btn hover-up " href="/gadgetly/login"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
+                                                    <% } %>
                                                 </div>
                                             </div>
                                         </div>
@@ -329,4 +337,72 @@
             </div>
         </section>
     </main>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            console.log("dom loaded")
+            const addToCartButtons = document.querySelectorAll('.cart-btn');
+            console.log("cart button accesssed")
+            addToCartButtons.forEach(function (button) {
+                button.addEventListener('click', async function (event) {
+                    event.preventDefault();
+                    const productId = this.getAttribute('productId');
+                    console.log('productId', productId);
+                    const response = await fetch(`/gadgetly/addtocart/?id=${productId}`, {
+                        method: 'GET'
+                    });
+                    const productData = await response.json();
+                    console.log('productdata', productData);
+                    if (productData.success) {                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+                        swal.fire({
+                            icon: 'success',
+                            title: 'Added to Cart',
+                            text: 'The product has been added to the cart'
+                        });
+                    }
+                    else if (productData.outofstock){
+                        swal.fire({
+                            icon: 'error',
+                            title:'Out of Stock',
+                            text:'The product is Out of Stock'
+                        })
+                    }
+                });
+            });
+        });
+    </script>
+
+    <!-- add to wish list with sweet alert -->
+    <script>
+         document.addEventListener('DOMContentLoaded', function () {
+            console.log("dom loaded")
+            const addToWishlistButtons = document.querySelectorAll('.wish-btn');
+            console.log("cart button accesssed")
+            addToWishlistButtons.forEach(function (button) {
+                button.addEventListener('click', async function (event) {
+                    event.preventDefault();
+                    const productId = this.getAttribute('productId');
+                    console.log('productId', productId);
+                    const response = await fetch(`/gadgetly/addwishlist/?id=${productId}`, {
+                        method: 'GET'
+                    });
+                    const productData = await response.json();
+                    console.log('productdata', productData);
+                    if (productData.success) {
+                        console.log("success");                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+                        swal.fire({
+                            icon: 'success',
+                            title: 'Added to Wishlist',
+                            text: 'The product has been added to wishlist'
+                        });
+                    }else{
+                        swal.fire({
+                            icon: 'failed',
+                            title: 'failed to Add to Wishlist',
+                            text: 'The product hasnot been added to wishlist'
+                        });
+                    }
+                });
+            });
+        });
+    </script>
 <%-include('../layout/footer') %>
