--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -50,7 +50,7 @@
                         </article>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <!-- <div class="col-lg-3">
                     <div class="card card-body mb-4">
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-info-light"><i class="text-info material-icons md-shopping_basket"></i></span>
@@ -62,7 +62,7 @@
                             </div>
                         </article>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="container">
                 <div class="row justify-content-between align-items-center">
