aggregation added in salesData & search added in home page

--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -76,7 +76,7 @@
                                 <div class="input-upload">
                                     <div id="imagePreviewContainer" class="image-preview-container"></div>
                                     <img src="/admin-assets/imgs/theme/upload.svg" alt="">
-                                   <input class="form-control" required="true" type="file" name="image" multiple accept="image/*" id="imageInput" onchange="handleImageChange()">
+                                   <input class="form-control"  type="file" name="image" multiple accept="image/*" id="imageInput" onchange="handleImageChange()">
                                     <span id="errorProductImage" class="text-danger"></span>
                                 </div>
                                 <!-- </div>
