--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -254,21 +254,16 @@
                       </div>
                       <% }else{ %>
                         <div class="search-style-2">
-                          <form action="#">
+                          <form action="/gadgetly/shop">
                               <select class="select-active">
-                                  <option>All Categories</option>
-                                  <option>Women's</option>
-                                  <option>Men's</option>
-                                  <option>Cellphones</option>
-                                  <option>Computer</option>
-                                  <option>Electronics</option>
-                                  <option> Accessories</option>
-                                  <option>Home & Garden</option>
-                                  <option>Luggage</option>
-                                  <option>Shoes</option>
-                                  <option>Mother & Kids</option>
+                                  <option value="">All Categories</option>
+                                  <% if(typeof category !="undefined" && category.length>0){
+                                    category.forEach((category)=>{ %>
+                                        <option value="<%= category._id %>"><%= category.categoryName %></option> 
+                                <%   })
+                               } %>
                               </select>
-                              <input type="text" placeholder="Search for items...">
+                              <input type="text" name="search" placeholder="Search for items...">
                           </form>
                       </div> 
                       <%  } %>
