--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -221,7 +221,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="index.html"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
+                        <a href="/gadgetly"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
                     </div>
                     <div class="header-right">
                       <%if(typeof productSearch !="undefined" && productSearch){ %>
